fixed area card alignment

--- a/ski-areas-frontend/src/App.css
+++ b/ski-areas-frontend/src/App.css
@@ -47,8 +47,12 @@ main {
 }
 
 .area-card {
+  display: flex;
+  flex-direction: column;
   background-color: rgb(233, 255, 255);
   width: 200px;
+  align-items: center;
+  margin-bottom: 1.5rem;
 }
 
 .area-list {
